--- a/header.html
+++ b/header.html
@@ -11,13 +11,11 @@
     <link rel="stylesheet" href="css/header.css">
 </head>
 <body>
-
     <header class="custom-header">
         <div class="header-container">
             <a class="logo-link" href="index.html">
                 <img src="img/logo.png" alt="Logo" class="header-logo">
             </a>
-
             <nav class="nav-links">
                 <a href="introduction.html" class="nav-item-link">INTRODUCTION</a>
                 <a href="character.html" class="nav-item-link">CHARACTER</a>
@@ -26,7 +24,10 @@
             </nav>
         </div>
     </header>
-     <div class="line"></div>
 
+    <div class="line"></div>
+
+    <div class="main-wrapper">
+        </div>
 </body>
 </html>
