--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>我的英雄學院 - 官網</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/style2.css">
 </head>
 
 
@@ -34,7 +34,7 @@
         <h2 class="section-title">NEWS</h2>
 
 <div class="news-grid">
-    <a href="https://gnn.gamer.com.tw/detail.php?sn=297465" class="news-card-link">
+    <a href="https://sounova.com/anime/my-hero-academia-10th-anime" class="news-card-link">
         <div class="news-card">
             <div class="news-card-inner">
                 <div class="news-card-front">
@@ -42,40 +42,40 @@
                         <img src="img\NEWS\news1.jpg" alt="新聞圖片1" class="news-thumbnail">
 
                     </div>
-                    <div class="news-text"><p>《我的英雄學院最終季》宣布將於 2025 年秋季開播</p></div>
+                    <div class="news-text"><p>動畫十週年重量級企劃公開！作者繪製特別篇章〈More〉確定動畫化，交響音樂會於日本和海外巡迴展出</p></div>
                 </div>
                 <div class="news-card-back"><span>點擊前往</span></div>
             </div>
         </div>
     </a>
-    <a href="連結2" class="news-card-link">
+    <a href="img\NEWS\news2.png" class="news-card-link">
         <div class="news-card">
             <div class="news-card-inner">
                 <div class="news-card-front">
-                    <div class="news-img-placeholder"></div>
-                    <div class="news-text"><p>《我的英雄學院最終季》內容描述</p></div>
+                    <div class="news-img-placeholder"><img src="img\NEWS\news2.png" alt="新聞圖片1" class="news-thumbnail"></div>
+                    <div class="news-text"><p>TV 動畫迎來最終回，最終季快閃店接力登場</p></div>
                 </div>
                 <div class="news-card-back"><span>點擊前往</span></div>
             </div>
         </div>
     </a>
-    <a href="連結3" class="news-card-link">
+    <a href="https://game.ettoday.net/article/3043290.htm" class="news-card-link">
         <div class="news-card">
             <div class="news-card-inner">
                 <div class="news-card-front">
-                    <div class="news-img-placeholder"></div>
-                    <div class="news-text"><p>《我的英雄學院最終季》內容描述</p></div>
+                    <div class="news-img-placeholder"><img src="img\NEWS\news3.jpg" alt="新聞圖片1" class="news-thumbnail"></div>
+                    <div class="news-text"><p>最新主機遊戲明年發售！3對3解放個性邁最終戰</p></div>
                 </div>
                 <div class="news-card-back"><span>點擊前往</span></div>
             </div>
         </div>
     </a>
-    <a href="連結4" class="news-card-link">
+    <a href="https://forum.gamer.com.tw/C.php?bsn=46236&snA=3602" class="news-card-link">
         <div class="news-card">
             <div class="news-card-inner">
                 <div class="news-card-front">
-                    <div class="news-img-placeholder"></div>
-                    <div class="news-text"><p>《我的英雄學院最終季》內容描述</p></div>
+                    <div class="news-img-placeholder"><img src="img\NEWS\news4.jpg" alt="新聞圖片1" class="news-thumbnail"></div>
+                    <div class="news-text"><p>《我的英雄學院 公式插畫集 Ultra Artworks》全一冊2月28日發售！</p></div>
                 </div>
                 <div class="news-card-back"><span>點擊前往</span></div>
             </div>
@@ -99,30 +99,6 @@
         
         <div class="line"></div>
     </div>
-
-
-<footer class="container footer">
-    <footer class="container footer">
-        <div class="line"></div>
-        <div class="container footer-content">
-            <div class="footer-info">
-                <a class="link-dark" href="">隱私條款</a><br>
-                <a class="link-dark" href="">使用條款</a><br>
-                <a class="link-dark" href="">贊助商</a><br>
-            </div>
-            <div>
-                <p class="footer-p">聯絡我們: myheroacademia@gmail.com</p>
-                <p class="footer-p">Copyright © 2025 Roxanne&Potato</p>
-            </div>
-
-
-            <div class="footer-icons">
-                <a href="#"><img class="footer-icons-ig" src="img\ig.svg" alt="ig"></a>
-                <a href="#"><img class="footer-icons-x" src="img\x.svg" alt="x"></a>
-                <a href="#"><img class="footer-icons-fb" src="img\fb.png" alt="fb"></a>
-            </div>
-        </div>
-    </footer>
 
     
 </body>
