--- a/character.html
+++ b/character.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>我的英雄學院 - 角色介紹</title>
 
-    <link rel="stylesheet" href="css/character.css">
+    <link rel="stylesheet" href="css/style2.css">
 </head>
 
 <body>
