--- a/resource.html
+++ b/resource.html
@@ -16,12 +16,13 @@
 
         <link rel="stylesheet" href="css/style.css">
         <link rel="stylesheet" href="css/resource.css">
+        <link rel="stylesheet" href="css/footer.css">
         <link rel="stylesheet" href="css/header.css">
 </head>
 
 <body>
 
-        
+
 
 
         <div id="loading-screen">
@@ -65,9 +66,8 @@
         </main>
 
         <footer class="container footer">
-                <div class="footer-line"></div>
+                <div class="line"></div>
                 <div class="footer-content">
-                        <div class="line"></div>
                         <div class="footer-left-group">
                                 <div class="footer-info">
                                         <a href="#">隱私政策</a>
