--- a/detail.html
+++ b/detail.html
@@ -8,10 +8,21 @@
         integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/pla.css">
+    <link rel="stylesheet" href="css/footer.css">
 </head>
 
 <body>
 
+    
+
+        <div id="loading-screen">
+                <div class="loading-content">
+                        <img src="img/all might.png" class="loading-img" alt="Loading">
+
+                        <div class="spinner"></div>
+                        <p class="loading-text">LOADING...</p>
+                </div>
+        </div>
 
 
 
@@ -75,15 +86,16 @@
 
     </div>
 
+
+
     <footer class="container footer">
-        <div class="footer-line"></div>
+        <div class="line"></div>
         <div class="footer-content">
-            <div class="line"></div>
             <div class="footer-left-group">
                 <div class="footer-info">
-                    <a href="#">隱私政策</a>
-                    <a href="#">使用條款</a>
-                    <a href="#">贊助商</a>
+                    <a href="#" class="link-dark">隱私政策</a>
+                    <a href="#" class="link-dark">使用條款</a>
+                    <a href="#" class="link-dark">贊助商</a>
                 </div>
                 <div class="footer-text">
                     <p class="footer-p">聯絡資訊: s111319036@stu.ntue.edu.tw</p>
@@ -100,11 +112,11 @@
     </footer>
 
 
-    <button id="back-to-top">
-        <img src="img/feather.png" alt="All Might Icon">
-        <span>TOP</span>
-    </button>
-    <script src="js\top.js"></script>
+
+      <button id="back-to-top" title="Go to top">
+                <img  src="img/feather.png" alt="Top" style="width: 40px;"> TOP
+        </button>
+        <script src="js\top.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-/bQdsTh/da6pkI1MST/rWKFNjaCP5gBSY4sEBT38Q/9RBh9AH40zEOg7Hlq2THRZ"
         crossorigin="anonymous"></script>
