--- a/pla.html
+++ b/pla.html
@@ -15,12 +15,23 @@
     <link rel="stylesheet" href="css\style.css">
     <link rel="stylesheet" href="css/pla.css">
     <link rel="stylesheet" href="css/header.css">
+    <link rel="stylesheet" href="css/footer.css">
 
 
 </head>
 
 <body>
 
+    
+
+        <div id="loading-screen">
+                <div class="loading-content">
+                        <img src="img/all might.png" class="loading-img" alt="Loading">
+
+                        <div class="spinner"></div>
+                        <p class="loading-text">LOADING...</p>
+                </div>
+        </div>
 
 
 
@@ -74,15 +85,15 @@
             </div>
         </div>
     </div>
+
     <footer class="container footer">
-        <div class="footer-line"></div>
+        <div class="line"></div>
         <div class="footer-content">
-            <div class="line"></div>
             <div class="footer-left-group">
                 <div class="footer-info">
-                    <a href="#">隱私政策</a>
-                    <a href="#">使用條款</a>
-                    <a href="#">贊助商</a>
+                    <a href="#" class="link-dark">隱私政策</a>
+                    <a href="#" class="link-dark">使用條款</a>
+                    <a href="#" class="link-dark">贊助商</a>
                 </div>
                 <div class="footer-text">
                     <p class="footer-p">聯絡資訊: s111319036@stu.ntue.edu.tw</p>
@@ -98,13 +109,10 @@
         </div>
     </footer>
 
-
-    <button id="back-to-top">
-        <img src="img/feather.png" alt="All Might Icon">
-        <span>TOP</span>
-    </button>
-    <script src="js\top.js"></script>
-    <script src="js\top.js"></script>
+     <button id="back-to-top" title="Go to top">
+                <img  src="img/feather.png" alt="Top" style="width: 40px;"> TOP
+        </button>
+        <script src="js\top.js"></script>
     <script type="module" src="js\loading.js"></script>
     <script type="module" src="js/main.js"></script>
 </body>
