--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <title>我的英雄學院 - 官網</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="css/style2.css">
+            <link rel="stylesheet" href="css/resource.css">
+               <link rel="stylesheet" href="css/style.css">
+
 </head>
 
 
@@ -101,5 +104,31 @@
     </div>
 
     
+        <footer class="container footer">
+                <div class="footer-line"></div>
+                <div class="footer-content">
+                        <div class="line"></div>
+                        <div class="footer-left-group">
+                                <div class="footer-info">
+                                        <a href="#">隱私政策</a>
+                                        <a href="#">使用條款</a>
+                                        <a href="#">贊助商</a>
+                                </div>
+                                <div class="footer-text">
+                                        <p class="footer-p">聯絡資訊: s111319036@stu.ntue.edu.tw</p>
+                                        <p class="footer-p">Copyright © 2025 Roxanne Wu</p>
+                                </div>
+                        </div>
+
+                        <div class="footer-icons">
+                                <a href="#"><img src="img/ig.svg" alt="ig"></a>
+                                <a href="#"><img src="img/x.svg" alt="x"></a>
+                                <a href="#"><img src="img/fb.png" alt="fb"></a>
+                        </div>
+                </div>
+        </footer>
+
+
+
 </body>
 </html>
