--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="css/style2.css">
             <link rel="stylesheet" href="css/resource.css">
                <link rel="stylesheet" href="css/style.css">
+               <link rel="stylesheet" href="css/footer.css">
 
 </head>
 
@@ -105,9 +106,8 @@
 
     
         <footer class="container footer">
-                <div class="footer-line"></div>
+                <div class="line"></div>
                 <div class="footer-content">
-                        <div class="line"></div>
                         <div class="footer-left-group">
                                 <div class="footer-info">
                                         <a href="#">隱私政策</a>
