--- a/index.html
+++ b/index.html
@@ -6,8 +6,10 @@
     <title>我的英雄學院 - 官網</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="css/style2.css">
-            <link rel="stylesheet" href="css/resource.css">
-               <link rel="stylesheet" href="css/style.css">
+        <link rel="stylesheet" href="css/resource.css">
+        <link rel="stylesheet" href="css/footer.css">
+        <link rel="stylesheet" href="css/header.css">
+        <link rel="stylesheet" href="css/style.css">
 
 </head>
 
