--- a/header.html
+++ b/header.html
@@ -4,30 +4,48 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>我的英雄學院 - Header</title>
-    
     <link href="https://fonts.googleapis.com/css2?family=Koulen&display=swap" rel="stylesheet">
-    
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="css/header.css">
 </head>
 <body>
-    <header class="custom-header">
-        <div class="header-container">
-            <a class="logo-link" href="index.html">
-                <img src="img/logo.png" alt="Logo" class="header-logo">
-            </a>
-            <nav class="nav-links">
-                <a href="introduction.html" class="nav-item-link">INTRODUCTION</a>
-                <a href="character.html" class="nav-item-link">CHARACTER</a>
-                <a href="resource.html" class="nav-item-link">RESOURCE</a>
-                <a href="pla.html" class="nav-item-link">PLATFORM</a>
-            </nav>
-        </div>
-    </header>
 
-    <div class="line"></div>
+<div class="fixed-header-wrapper"></div>
+  <header class="custom-header">
+    <div class="header-container">
+        <a class="logo-link" href="index.html">
+            <img src="img/logo.png" alt="Logo" class="header-logo">
+        </a>
 
-    <div class="main-wrapper">
+        <div class="menu-toggle" id="mobile-menu">
+            <span class="bar"></span>
+            <span class="bar"></span>
         </div>
+
+        <nav class="nav-links">
+            <a href="introduction.html" class="nav-item-link">INTRODUCTION</a>
+            <a href="character.html" class="nav-item-link">CHARACTER</a>
+            <a href="resource.html" class="nav-item-link">RESOURCE</a>
+            <a href="pla.html" class="nav-item-link">PLATFORM</a>
+        </nav>
+    </div>
+</header>
+
+<div class="line"></div>
+
+<script>
+    // 確保網頁載入後才執行
+    document.addEventListener('DOMContentLoaded', function() {
+        const menu = document.querySelector('#mobile-menu');
+        const nav = document.querySelector('.nav-links');
+
+        if (menu) {
+            menu.onclick = function() {
+                menu.classList.toggle('active');
+                nav.classList.toggle('show');
+            };
+        }
+    });
+</script>
 </body>
 </html>
