--- a/detail.html
+++ b/detail.html
@@ -13,16 +13,6 @@
 
 <body>
 
-    
-
-        <div id="loading-screen">
-                <div class="loading-content">
-                        <img src="img/all might.png" class="loading-img" alt="Loading">
-
-                        <div class="spinner"></div>
-                        <p class="loading-text">LOADING...</p>
-                </div>
-        </div>
 
 
 
@@ -98,8 +88,8 @@
                     <a href="#" class="link-dark">贊助商</a>
                 </div>
                 <div class="footer-text">
-                    <p class="footer-p">聯絡資訊: s111319036@stu.ntue.edu.tw</p>
-                    <p class="footer-p">Copyright © 2025 Roxanne Wu</p>
+                    <p class="footer-p">聯絡資訊: myheroacademia@gmail.com</p>
+                    <p class="footer-p">Copyright © 2025 Roxanne&Potato</p>
                 </div>
             </div>
 
