--- a/resource.html
+++ b/resource.html
@@ -76,8 +76,8 @@
                                         <a href="#" class="link-dark">贊助商</a>
                                 </div>
                                 <div class="footer-text">
-                                        <p class="footer-p">聯絡資訊: s111319036@stu.ntue.edu.tw</p>
-                                        <p class="footer-p">Copyright © 2025 Roxanne Wu</p>
+                                        <p class="footer-p">聯絡資訊: myheroacademia@gmail.com</p>
+                                        <p class="footer-p">Copyright © 2025 Roxanne&Potato</p>
                                 </div>
                         </div>
 
