--- a/character.html
+++ b/character.html
@@ -27,21 +27,25 @@
 </head>
 <body>
 
-    <header class="custom-header">
-        <div class="header-container">
-            <a class="logo-link" href="index.html">
-                <img src="img/logo.png" alt="Logo" class="header-logo">
-            </a>
+  <header class="custom-header">
+    <div class="header-container">
+        <a class="logo-link" href="index.html">
+            <img src="img/logo.png" alt="Logo" class="header-logo">
+        </a>
 
-            <nav class="nav-links">
-                <a href="introduction.html" class="nav-item-link">INTRODUCTION</a>
-                <a href="character.html" class="nav-item-link">CHARACTER</a>
-                <a href="resource.html" class="nav-item-link">RESOURCE</a>
-                <a href="pla.html" class="nav-item-link">PLATFORM</a>
-            </nav>
+        <div class="menu-toggle" id="mobile-menu">
+            <span class="bar"></span>
+            <span class="bar"></span>
         </div>
-    </header>
-     <div class="line"></div>
+
+        <nav class="nav-links">
+            <a href="introduction.html" class="nav-item-link">INTRODUCTION</a>
+            <a href="character.html" class="nav-item-link">CHARACTER</a>
+            <a href="resource.html" class="nav-item-link">RESOURCE</a>
+            <a href="pla.html" class="nav-item-link">PLATFORM</a>
+        </nav>
+    </div>
+</header>
 
 </body>
 </html>
