--- a/introduction.html
+++ b/introduction.html
@@ -7,6 +7,9 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="css/style2.css">
     <link rel="stylesheet" href="css/intro.css">
+                   <link href="https://fonts.googleapis.com/css2?family=Koulen&display=swap" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="css/header.css">
 </head>
 
 <body>
@@ -28,24 +31,27 @@
 </head>
 <body>
 
+<div class="fixed-header-wrapper"></div>
+  <header class="custom-header">
+    <div class="header-container">
+        <a class="logo-link" href="index.html">
+            <img src="img/logo.png" alt="Logo" class="header-logo">
+        </a>
 
-
-    
-    <header class="custom-header">
-        <div class="header-container">
-            <a class="logo-link" href="index.html">
-                <img src="img/logo.png" alt="Logo" class="header-logo">
-            </a>
-
-            <nav class="nav-links">
-                <a href="introduction.html" class="nav-item-link">INTRODUCTION</a>
-                <a href="character.html" class="nav-item-link">CHARACTER</a>
-                <a href="resource.html" class="nav-item-link">RESOURCE</a>
-                <a href="pla.html" class="nav-item-link">PLATFORM</a>
-            </nav>
+        <div class="menu-toggle" id="mobile-menu">
+            <span class="bar"></span>
+            <span class="bar"></span>
         </div>
-    </header>
-     <div class="line"></div>
+
+        <nav class="nav-links">
+            <a href="introduction.html" class="nav-item-link">INTRODUCTION</a>
+            <a href="character.html" class="nav-item-link">CHARACTER</a>
+            <a href="resource.html" class="nav-item-link">RESOURCE</a>
+            <a href="pla.html" class="nav-item-link">PLATFORM</a>
+        </nav>
+    </div>
+    <div class="line"></div>
+</header>
 
 </body>
 </html>
