--- a/introduction.html
+++ b/introduction.html
@@ -7,6 +7,10 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="css/style2.css">
     <link rel="stylesheet" href="css/intro.css">
+        <link rel="stylesheet" href="css/style2.css">
+            <link rel="stylesheet" href="css/resource.css">
+               <link rel="stylesheet" href="css/style.css">
+               <link rel="stylesheet" href="css/footer.css">
                    <link href="https://fonts.googleapis.com/css2?family=Koulen&display=swap" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="css/header.css">
@@ -14,22 +18,6 @@
 
 <body>
 
-
-
-<!-- 放header -->
-<!DOCTYPE html>
-<html lang="zh-Hant">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>我的英雄學院 - Header</title>
-    
-    <link href="https://fonts.googleapis.com/css2?family=Koulen&display=swap" rel="stylesheet">
-    
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="css/header.css">
-</head>
-<body>
 
 <div class="fixed-header-wrapper"></div>
   <header class="custom-header">
