--- a/header.html
+++ b/header.html
@@ -29,7 +29,7 @@
             <a href="pla.html" class="nav-item-link">PLATFORM</a>
         </nav>
     </div>
-    <div class="line"></div>
+    <div class="header-line"></div>
 </header>
 
 <div class="line"></div>
