--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
             <a href="resource.html" class="nav-item-link">RESOURCE</a>
             <a href="pla.html" class="nav-item-link">PLATFORM</a>
         </nav>
+        <div class="header-line"></div>
     </div>
 </header>
 
@@ -189,7 +190,7 @@
 
     
         <footer class="container footer">
-                <div class="line"></div>
+               
                 <div class="footer-content">
                         <div class="footer-left-group">
                                 <div class="footer-info">
