--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
             <a href="resource.html" class="nav-item-link">RESOURCE</a>
             <a href="pla.html" class="nav-item-link">PLATFORM</a>
         </nav>
-        <div class="header-line"></div>
+        <div class="line"></div>
     </div>
 </header>
 
