--- a/resource.html
+++ b/resource.html
@@ -50,7 +50,7 @@
                                 <a href="pla.html" class="nav-item-link">PLATFORM</a>
                         </nav>
                 </div>
-                <div class="header-line"></div>
+                <div class="line"></div>
         </header>
         <div id="manga-overlay"></div>
 
