--- a/introduction.html
+++ b/introduction.html
@@ -38,7 +38,7 @@
             <a href="pla.html" class="nav-item-link">PLATFORM</a>
         </nav>
     </div>
-    <div class="header-line"></div>
+    <div class="line"></div>
 </header>
 
 </body>
