--- a/introduction.html
+++ b/introduction.html
@@ -77,7 +77,7 @@
                     </div>
                 </div>
 
-                <div class="line"></div>
+                <div class="content-line"></div>
 
                 <div class="intro-row reverse">
                     <div class="text-box">
@@ -92,13 +92,8 @@
                 </div>
 
             </div>
-        </div> </div> <div id="footer-placeholder"></div>
-    <script>
-        fetch('footer.html')
-            .then(response => response.text())
-            .then(data => {
-                document.getElementById('footer-placeholder').innerHTML = data;
-            });
-    </script>
+        </div> 
+    </div>
+
 </body>
 </html>
