--- a/resource.html
+++ b/resource.html
@@ -71,7 +71,7 @@
                                 </div>
                         </section>
 
-                        <div class="line my-5"></div>
+                        <div class="content-line my-5"></div>
 
                         <section>
                                 <h2 class="container manga-title mb-4">Manga</h2>
@@ -85,7 +85,7 @@
         </main>
 
         <footer class="container footer">
-                <div class="line"></div>
+                <div class="content-line"></div>
                 <div class="footer-content">
                         <div class="footer-left-group">
                                 <div class="footer-info">
