--- a/detail.html
+++ b/detail.html
@@ -109,7 +109,7 @@
 
 
     <footer class="container footer">
-        <div class="line"></div>
+        <div class="content-line"></div>
         <div class="footer-content">
             <div class="footer-left-group">
                 <div class="footer-info">
