--- a/index.html
+++ b/index.html
@@ -175,14 +175,22 @@
 
         <div class="line"></div>
         <h2 class="section-title">COMING SOON</h2>
-        <div class="video-section">
+       <div class="video-section">
             <div class="video-container">
-                <div class="video-placeholder">影片 1</div>
-            </div>
-            <div class="video-container">
-                <div class="video-placeholder">影片 2</div>
-            </div>
-        </div>
+                <div class="video-wrapper">
+                    <iframe 
+                        width="100%" 
+                        height="100%" 
+                        src="https://youtu.be/mMU9DHqWfq8?si=UUT-UtrQVI8-ePvW" 
+                        title="YouTube video player" 
+                        frameborder="0" 
+                        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
+                        referrerpolicy="strict-origin-when-cross-origin" 
+                        allowfullscreen>
+                    </iframe>
+                </div>
+            </div> 
+        </div> 
         
         <div class="line"></div>
     </div>
