--- a/character.html
+++ b/character.html
@@ -248,7 +248,7 @@
         },
         "安德瓦": { bg: "img/background/hero/fire.png", char: "img/characters/HERO/endeavor.png" },
         "霍克斯": { bg: "img/background/hero/bird.png", char: "img/characters/HERO/hawks.png",size: "120%" },
-        "最佳牛仔褲時尚名人": { bg: "img/background/hero/jeans.png", char: "img/characters/HERO/jeans.png" },
+        "最佳牛仔褲時尚名人": { bg: "img/background/hero/jeans.png", char: "img/characters/HERO/jeans.png",pos: "-20%" },
         "暴力虎鯨": { bg: "img/background/V/shigaraki.png", char: "img/characters/HERO/gang orca.png" },
         "夜目爵士": { bg: "img/background/hero/eye.png", char: "img/characters/HERO/sir nighteye.png" },
         "紙鋒射手": { bg: "img/background/hero/ninjia.png", char: "img/characters/HERO/edgeshot.png" },
@@ -361,7 +361,7 @@
 
     // 職業英雄
     setupSection(
-        ["歐爾麥特", "安德瓦", "霍克斯", "最佳牛仔褲時尚名人", "暴力虎鯨", "夜目爵士", "紙鋒射手", "經典老爺車", "肥膠"],
+        ["歐爾麥特", "安德瓦", "霍克斯", "最佳牛仔褲時尚名人", "夜目爵士", "紙鋒射手", "經典老爺車", "肥膠"],
         'grid-hero', 'bg-layer-hero', 'char-layer-hero','back-layer-hero'
     );
 
