--- a/index.html
+++ b/index.html
@@ -179,40 +179,43 @@
 
     </div>
 
-    <div class="content-line"></div>
+   <div class="content-line"></div>
     <h2 class="section-title">COMING SOON</h2>
-    <div class="video-section">
-        <div class="video-container">
-            <div class="video-placeholder">影片 1</div>
-        </div>
-        <div class="video-container">
-            <div class="video-placeholder">影片 2</div>
-        </div>
-    </div>
 
+    <div class="video-section">
+        
+        <div class="video-container">
+            <div class="video-wrapper">
+                <iframe 
+                    width="100%" 
+                    height="100%" 
+                    src="https://www.youtube.com/embed/mMU9DHqWfq8?autoplay=1&mute=1" 
+                    title="YouTube video player" 
+                    frameborder="0" 
+                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
+                    allowfullscreen>
+                </iframe>
+            </div>
+        </div>
+
+        <div class="video-container">
+            <div class="video-wrapper">
+                <iframe 
+                    width="100%" 
+                    height="100%" 
+                    src="https://www.youtube.com/embed/9qOVlrm3_AE?autoplay=1&mute=1" 
+                    title="YouTube video player" 
+                    frameborder="0" 
+                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
+                    allowfullscreen>
+                </iframe>
+            </div>
+        </div>
+
+    </div>
     <div class="content-line"></div>
 </div>
 
-<<<<<<< HEAD
-        <div class="line"></div>
-        <h2 class="section-title">COMING SOON</h2>
-       <div class="video-section">
-            <div class="video-container">
-                <div class="video-wrapper">
-                    <iframe 
-                        width="100%" 
-                        height="100%" 
-                        src="https://youtu.be/mMU9DHqWfq8?si=UUT-UtrQVI8-ePvW" 
-                        title="YouTube video player" 
-                        frameborder="0" 
-                        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
-                        referrerpolicy="strict-origin-when-cross-origin" 
-                        allowfullscreen>
-                    </iframe>
-                </div>
-            </div> 
-        </div> 
-        
         <div class="line"></div>
     </div>
 
@@ -239,10 +242,6 @@
                         </div>
                 </div>
         </footer>
-=======
->>>>>>> c39e2c2c71b6f7322714d3a918392298f9f45756
-
-
 
 </body>
 
