--- a/detail.html
+++ b/detail.html
@@ -142,6 +142,7 @@
         crossorigin="anonymous"></script>
     <script type="module" src="js\loading.js"></script>
     <script type="module" src="js/detail.js"></script>
+    <script src="js/burger.js"></script>    
 </body>
 
 </html>
