--- a/introduction.html
+++ b/introduction.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="zh-Hant">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,128 +8,170 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="css/style2.css">
     <link rel="stylesheet" href="css/intro.css">
-        <link rel="stylesheet" href="css/style2.css">
-            <link rel="stylesheet" href="css/resource.css">
-               <link rel="stylesheet" href="css/style.css">
-               <link rel="stylesheet" href="css/footer.css">
-                   <link href="https://fonts.googleapis.com/css2?family=Koulen&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="css/style2.css">
+    <link rel="stylesheet" href="css/resource.css">
+    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/footer.css">
+    <link href="https://fonts.googleapis.com/css2?family=Koulen&display=swap" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="css/header.css">
 </head>
 
 <body>
 
+    <div id="loading-screen">
+        <div class="loading-content">
+            <img src="img/all might.png" class="loading-img" alt="Loading">
 
-<div class="fixed-header-wrapper"></div>
-  <header class="custom-header">
-    <div class="header-container">
-        <a class="logo-link" href="index.html">
-            <img src="img/logo.png" alt="Logo" class="header-logo">
-        </a>
-
-        <div class="menu-toggle" id="mobile-menu">
-            <span class="bar"></span>
-            <span class="bar"></span>
+            <div class="spinner"></div>
+            <p class="loading-text">LOADING...</p>
         </div>
-
-        <nav class="nav-links">
-            <a href="introduction.html" class="nav-item-link">INTRODUCTION</a>
-            <a href="character.html" class="nav-item-link">CHARACTER</a>
-            <a href="resource.html" class="nav-item-link">RESOURCE</a>
-            <a href="pla.html" class="nav-item-link">PLATFORM</a>
-        </nav>
     </div>
-    <div class="line"></div>
-</header>
-<script>
-    // 1. 漢堡選單邏輯
-    document.addEventListener('DOMContentLoaded', function() {
-        const menu = document.querySelector('#mobile-menu');
-        const nav = document.querySelector('.nav-links');
-        
-        if (menu) {
-            menu.onclick = function() {
-                // 切換 active class，讓漢堡變叉叉
-                menu.classList.toggle('active');
-                // 切換 show class，讓選單滑出來
-                nav.classList.toggle('show');
-            };
-        }
-    });
 
-    // 2. Footer 載入邏輯 (保留你原本的)
-    fetch('footer.html')
-        .then(response => response.text())
-        .then(data => {
-            document.getElementById('footer-placeholder').innerHTML = data;
+    <div class="fixed-header-wrapper"></div>
+    <header class="custom-header">
+        <div class="header-container">
+            <a class="logo-link" href="index.html">
+                <img src="img/logo.png" alt="Logo" class="header-logo">
+            </a>
+
+            <div class="menu-toggle" id="mobile-menu">
+                <span class="bar"></span>
+                <span class="bar"></span>
+            </div>
+
+            <nav class="nav-links">
+                <a href="introduction.html" class="nav-item-link">INTRODUCTION</a>
+                <a href="character.html" class="nav-item-link">CHARACTER</a>
+                <a href="resource.html" class="nav-item-link">RESOURCE</a>
+                <a href="pla.html" class="nav-item-link">PLATFORM</a>
+            </nav>
+        </div>
+        <div class="line"></div>
+    </header>
+    <script>
+        // 1. 漢堡選單邏輯
+        document.addEventListener('DOMContentLoaded', function () {
+            const menu = document.querySelector('#mobile-menu');
+            const nav = document.querySelector('.nav-links');
+
+            if (menu) {
+                menu.onclick = function () {
+                    // 切換 active class，讓漢堡變叉叉
+                    menu.classList.toggle('active');
+                    // 切換 show class，讓選單滑出來
+                    nav.classList.toggle('show');
+                };
+            }
         });
-</script>
+
+        // 2. Footer 載入邏輯 (保留你原本的)
+        fetch('footer.html')
+            .then(response => response.text())
+            .then(data => {
+                document.getElementById('footer-placeholder').innerHTML = data;
+            });
+    </script>
 </body>
+
 </html>
 
 
 
-    <div class="container main-content">
-        <div class="video-section">
-            <div class="video-container">
-                <div class="video-wrapper">
-                    <iframe 
-                        width="100%" 
-                        height="100%" 
-                        src="https://www.youtube.com/embed/wQgQij8Ry4g?si=NbciIpG6ALeqbasu&start=3&autoplay=1&mute=1" 
-                        title="YouTube video player" 
-                        frameborder="0" 
-                        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
-                        referrerpolicy="strict-origin-when-cross-origin" 
-                        allowfullscreen>
-                    </iframe>
-                </div>
-            </div> 
-        </div> <div class="intro-page-wrapper">
-            <div class="container">
-                
-                <div class="intro-row">
-                    <div class="text-box">
-                        <h2 class="section-title-custom">故事介紹</h2>
-                        <p class="content-text">
-                            綠谷出久，最初是個沒有「個性」的少年，但他仍憧憬並渴望成為一位英雄，也期望自己能進入培育英雄的雄英高校就讀。但周圍的人都不看好沒有個性的他能成為一名英雄，讓他總是在他人的嘲笑和輕視中度過。直到他遇上了自己最仰慕的英雄，被人稱為「和平的象徵」的歐爾麥特，他的夢想將因此獲得實現的可能性。在經過歐爾麥特的十個月特訓後，獲得歐爾麥特的個性ONE・FOR ALL，之後成功考進了雄英高校。本作的故事主線便環繞在綠谷、雄英師生、親友們和其他人士在這個「個性」普及化的世界裡交織的經歷與冒險。
-                        </p>
-                    </div>
-                    <div class="img-box">
-                        <img src="img/manga/manga1.png" alt="故事介紹">
-                    </div>
-                </div>
-
-                <div class="content-line"></div>
-
-                <div class="intro-row reverse">
-                    <div class="text-box">
-                        <h2 class="section-title-custom">原作者介紹</h2>
-                        <p class="content-text">
-                            堀越耕平，在名古屋藝術大學設計系的就讀期間，短篇〈ヌケガラ〉獲得第72回手塚獎佳作，2008年刊載了短篇《我的英雄》（僕のヒ一ロ一）是之後連載的《我的英雄學院》的前身。2010年推出連載《逢魔時刻動物園》，2012年推出連載《戰星的巴爾基》，皆因為作品慢熱而人氣不高，結束《戰星的巴爾基》的連載後大受打擊，為了尋求靈感而翻起自己以前的作品，將過去推出的短篇《我的英雄》修改後在2014年推出《我的英雄學院》，相較前兩部作品大受歡迎。
-                        </p>
-                    </div>
-                    <div class="img-box">
-                        <img src="img/Horikoshi.jpg" alt="原作者介紹">
-                    </div>
-                </div>
-                <div class="content-line"></div>
-
-                <div class="intro-row">
-                    <div class="text-box">
-                        <h2 class="section-title-custom">動畫製作團隊</h2>
-                        <p class="content-text">
-                            電視動畫由日本知名的動畫製作公司「BONES」（骨頭社）操刀製作，該公司以極高水準的戰鬥作畫與流暢的動作場面聞名業界。自2016年首播以來，製作團隊不僅忠實還原了堀越耕平筆下獨特的美式漫畫風格，更透過導演長崎健司與劇本統籌黑田洋介的精心編排，將原作的熱血與感動完美呈現。此外，由林友樹負責的配樂（OST）更是動畫的一大亮點，激昂的旋律成功打造了無數經典的名場面。
-                        </p>
-                    </div>
-                    <div class="img-box">
-                        <img src="img\animalogo.png" alt="動畫製作團隊">
-                    </div>
-                </div>
-
+<div class="container main-content">
+    <div class="video-section">
+        <div class="video-container">
+            <div class="video-wrapper">
+                <iframe width="100%" height="100%"
+                    src="https://www.youtube.com/embed/wQgQij8Ry4g?si=NbciIpG6ALeqbasu&start=3&autoplay=1&mute=1"
+                    title="YouTube video player" frameborder="0"
+                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                    referrerpolicy="strict-origin-when-cross-origin" allowfullscreen>
+                </iframe>
             </div>
-        </div> 
+        </div>
     </div>
+    <div class="intro-page-wrapper">
+        <div class="container">
 
+            <div class="intro-row">
+                <div class="text-box">
+                    <h2 class="section-title-custom">故事介紹</h2>
+                    <p class="content-text">
+                        綠谷出久，最初是個沒有「個性」的少年，但他仍憧憬並渴望成為一位英雄，也期望自己能進入培育英雄的雄英高校就讀。但周圍的人都不看好沒有個性的他能成為一名英雄，讓他總是在他人的嘲笑和輕視中度過。直到他遇上了自己最仰慕的英雄，被人稱為「和平的象徵」的歐爾麥特，他的夢想將因此獲得實現的可能性。在經過歐爾麥特的十個月特訓後，獲得歐爾麥特的個性ONE・FOR
+                        ALL，之後成功考進了雄英高校。本作的故事主線便環繞在綠谷、雄英師生、親友們和其他人士在這個「個性」普及化的世界裡交織的經歷與冒險。
+                    </p>
+                </div>
+                <div class="img-box">
+                    <img src="img/manga/manga1.png" alt="故事介紹">
+                </div>
+            </div>
+
+            <div class="content-line"></div>
+
+            <div class="intro-row reverse">
+                <div class="text-box">
+                    <h2 class="section-title-custom">原作者介紹</h2>
+                    <p class="content-text">
+                        堀越耕平，在名古屋藝術大學設計系的就讀期間，短篇〈ヌケガラ〉獲得第72回手塚獎佳作，2008年刊載了短篇《我的英雄》（僕のヒ一ロ一）是之後連載的《我的英雄學院》的前身。2010年推出連載《逢魔時刻動物園》，2012年推出連載《戰星的巴爾基》，皆因為作品慢熱而人氣不高，結束《戰星的巴爾基》的連載後大受打擊，為了尋求靈感而翻起自己以前的作品，將過去推出的短篇《我的英雄》修改後在2014年推出《我的英雄學院》，相較前兩部作品大受歡迎。
+                    </p>
+                </div>
+                <div class="img-box">
+                    <img src="img/Horikoshi.jpg" alt="原作者介紹">
+                </div>
+            </div>
+            <div class="content-line"></div>
+
+            <div class="intro-row">
+                <div class="text-box">
+                    <h2 class="section-title-custom">動畫製作團隊</h2>
+                    <p class="content-text">
+                        電視動畫由日本知名的動畫製作公司「BONES」（骨頭社）操刀製作，該公司以極高水準的戰鬥作畫與流暢的動作場面聞名業界。自2016年首播以來，製作團隊不僅忠實還原了堀越耕平筆下獨特的美式漫畫風格，更透過導演長崎健司與劇本統籌黑田洋介的精心編排，將原作的熱血與感動完美呈現。此外，由林友樹負責的配樂（OST）更是動畫的一大亮點，激昂的旋律成功打造了無數經典的名場面。
+                    </p>
+                </div>
+                <div class="img-box">
+                    <img src="img\animalogo.png" alt="動畫製作團隊">
+                </div>
+            </div>
+
+        </div>
+    </div>
+</div>
+
+
+<footer class="container footer">
+    <div class="content-line"></div>
+    <div class="footer-content">
+        <div class="footer-left-group">
+            <div class="footer-info">
+                <a href="#" class="link-dark">隱私政策</a>
+                <a href="#" class="link-dark">使用條款</a>
+                <a href="#" class="link-dark">贊助商</a>
+            </div>
+            <div class="footer-text">
+                <p class="footer-p">聯絡資訊: myheroacademia@gmail.com</p>
+                <p class="footer-p">Copyright © 2025 Roxanne&Potato</p>
+            </div>
+        </div>
+
+        <div class="footer-icons">
+            <a href="#"><img src="img/ig.svg" alt="ig"></a>
+            <a href="#"><img src="img/x.svg" alt="x"></a>
+            <a href="#"><img src="img/fb.png" alt="fb"></a>
+        </div>
+    </div>
+</footer>
+
+<button id="back-to-top" title="Go to top">
+    <img src="img/feather.png" alt="Top" style="width: 40px;"> TOP
+</button>
+<script src="js\top.js"></script>
+
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-/bQdsTh/da6pkI1MST/rWKFNjaCP5gBSY4sEBT38Q/9RBh9AH40zEOg7Hlq2THRZ"
+    crossorigin="anonymous"></script>
+<script src="js\loading.js"></script>
+<script src="js/burger.js"></script>    
 </body>
+
 </html>
