--- a/pla.html
+++ b/pla.html
@@ -124,4 +124,5 @@
         <script src="js\top.js"></script>
     <script type="module" src="js\loading.js"></script>
     <script type="module" src="js/main.js"></script>
+    <script src="js/burger.js"></script>    
 </body>
