--- a/introduction.html
+++ b/introduction.html
@@ -91,9 +91,9 @@
             </div>
         </div>
     </div>
-    <div class="intro-page-wrapper">
+    <div class="intro-page-wrapper" style="margin-bottom: 0; padding-bottom: 0%;">
         <div class="container">
-
+            <div class="content-line"></div>
             <div class="intro-row">
                 <div class="text-box">
                     <h2 class="section-title-custom">故事介紹</h2>
@@ -122,7 +122,7 @@
             </div>
             <div class="content-line"></div>
 
-            <div class="intro-row">
+            <div class="intro-row" style="margin-bottom:0 ;padding-bottom: 0%;">
                 <div class="text-box">
                     <h2 class="section-title-custom">動畫製作團隊</h2>
                     <p class="content-text">
@@ -139,28 +139,28 @@
 </div>
 
 
-<footer class="container footer">
-    <div class="content-line"></div>
-    <div class="footer-content">
-        <div class="footer-left-group">
-            <div class="footer-info">
-                <a href="#" class="link-dark">隱私政策</a>
-                <a href="#" class="link-dark">使用條款</a>
-                <a href="#" class="link-dark">贊助商</a>
-            </div>
-            <div class="footer-text">
-                <p class="footer-p">聯絡資訊: myheroacademia@gmail.com</p>
-                <p class="footer-p">Copyright © 2025 Roxanne&Potato</p>
-            </div>
-        </div>
+        <footer class="container footer">
+                <div class="content-line"></div>
+                <div class="footer-content">
+                        <div class="footer-left-group">
+                                <div class="footer-info">
+                                        <a href="#" class="link-dark">隱私政策</a>
+                                        <a href="#" class="link-dark">使用條款</a>
+                                        <a href="#" class="link-dark">贊助商</a>
+                                </div>
+                                <div class="footer-text">
+                                        <p class="footer-p">聯絡資訊: myheroacademia@gmail.com</p>
+                                        <p class="footer-p">Copyright © 2025 Roxanne&Potato</p>
+                                </div>
+                        </div>
 
-        <div class="footer-icons">
-            <a href="#"><img src="img/ig.svg" alt="ig"></a>
-            <a href="#"><img src="img/x.svg" alt="x"></a>
-            <a href="#"><img src="img/fb.png" alt="fb"></a>
-        </div>
-    </div>
-</footer>
+                        <div class="footer-icons">
+                                <a href="#"><img src="img/ig.svg" alt="ig"></a>
+                                <a href="#"><img src="img/x.svg" alt="x"></a>
+                                <a href="#"><img src="img/fb.png" alt="fb"></a>
+                        </div>
+                </div>
+        </footer>
 
 <button id="back-to-top" title="Go to top">
     <img src="img/feather.png" alt="Top" style="width: 40px;"> TOP
