--- a/character.html
+++ b/character.html
@@ -27,7 +27,7 @@
     </div>
 
     <header class="custom-header">
-        <div class="header-container">
+        <div class="header-container"z>
             <a class="logo-link" href="index.html">
                 <img src="img/logo.png" alt="Logo" class="header-logo">
             </a>
@@ -64,7 +64,7 @@
 
         <div class="list-container">
             <div class="class-label">A班</div>
-            <div class="name-grid" id="name-grid">
+            <div class="name-grid" id="name-grid" style="font-family: 'Inter', sans-serif; font-weight: 900;">
                 </div>
         </div>
     </div>
@@ -81,7 +81,7 @@
         </div>
         <div class="list-container">
             <div class="class-label">敵聯合</div>
-            <div class="name-grid" id="grid-villain"></div>
+            <div class="name-grid" id="grid-villain" style="font-family: 'Inter', sans-serif; font-weight: 900;"></div>
         </div>
     </div>
 
@@ -99,7 +99,7 @@
         </div>
         <div class="list-container">
             <div class="class-label">職業英雄</div>
-            <div class="name-grid" id="grid-hero"></div>
+            <div class="name-grid" id="grid-hero"  style="font-family: 'Inter', sans-serif; font-weight: 900;"></div>
         </div>
     </div>
 
@@ -117,7 +117,7 @@
         </div>
         <div class="list-container">
             <div class="class-label">校內人士</div>
-            <div class="name-grid" id="grid-staff"></div>
+            <div class="name-grid" id="grid-staff"  style="font-family: 'Inter', sans-serif; font-weight: 900;"></div>
         </div>
     </div>
 
@@ -136,11 +136,11 @@
                 </div>
             </div>
 
-            <div class="footer-icons">
-                <a href="#"><img src="img/ig.svg" alt="ig"></a>
-                <a href="#"><img src="img/x.svg" alt="x"></a>
-                <a href="#"><img src="img/fb.png" alt="fb"></a>
-            </div>
+                        <div class="footer-icons">
+                                <a href="https://www.instagram.com/heroaca_insta/" target="_blank"><img src="img/ig.svg" alt="ig"></a>
+                                <a href="https://x.com/search?q=%23%E6%88%91%E8%8B%B1" target="_blank"><img src="img/x.svg" alt="x"></a>
+                                <a href="https://www.facebook.com/heroacademia/?locale=zh_TW" target="_blank"><img src="img/fb.png" alt="fb"></a>
+                        </div>
         </div>
     </footer>
 
