--- a/detail.html
+++ b/detail.html
@@ -119,9 +119,9 @@
                         </div>
 
                         <div class="footer-icons">
-                                <a href="#"><img src="img/ig.svg" alt="ig"></a>
-                                <a href="#"><img src="img/x.svg" alt="x"></a>
-                                <a href="#"><img src="img/fb.png" alt="fb"></a>
+                                <a href="https://www.instagram.com/heroaca_insta/" target="_blank"><img src="img/ig.svg" alt="ig"></a>
+                                <a href="https://x.com/search?q=%23%E6%88%91%E8%8B%B1" target="_blank"><img src="img/x.svg" alt="x"></a>
+                                <a href="https://www.facebook.com/heroacademia/?locale=zh_TW" target="_blank"><img src="img/fb.png" alt="fb"></a>
                         </div>
                 </div>
         </footer>
