--- a/character.html
+++ b/character.html
@@ -87,7 +87,7 @@
 
     <div class="line"></div>
 
-    <div class="main-wrapper">
+          <!-- <div class="main-wrapper">
         <div class="display-container">
             <div class="card-image-wrapper">
                 <div class="bg-slide-left"></div>
@@ -100,8 +100,8 @@
         <div class="list-container">
             <div class="class-label">職業英雄</div>
             <div class="name-grid" id="grid-hero"  style="font-family: 'Inter', sans-serif; font-weight: 900;"></div>
-        </div>
-    </div>
+        </div> -->
+
 
     <div class="line"></div>
 
